gitops/production/pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf
  namespace: pdf-production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/proxy-body-size: "60m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pdf.internal.prakash.com.br
      secretName: pdf-tls
  rules:
  - host: pdf.internal.prakash.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pdf
            port:
              number: 4000
